@startuml
' TP 4 : Diagramme de Classes - Contrôle d'Accès Sécurisé
skinparam classAttributeIconSize 0

class LecteurRFID {
    - portSerie : string
    + LecteurRFID(port: string)
    + lireUID() : string
}

class GacheElectrique {
    - pinGPIO : int
    + GacheElectrique(gpio: int)
    + deverrouiller(secondes: int) : void
}

class Signalisation {
    - pinLedVerte : int
    - pinLedRouge : int
    + Signalisation(verte: int, rouge: int)
    + accesAutorise() : void
    + accesRefuse() : void
}

class ClientAuthAPI {
    - urlServeur : string
    + ClientAuthAPI(url: string)
    + validerDroits(uid: string, pin: string) : bool
}

class ControleurAcces {
    - nomZone : string
    + ControleurAcces(nomZone: string, api: ClientAuthAPI*)
    + traiterIdentification(uid: string, pin: string) : bool
}

' Relations déjà fournies (Composition forte des composants matériels soudés) :
ControleurAcces *-- "1" LecteurRFID      : integre
ControleurAcces *-- "1" GacheElectrique  : pilote

' ==============================================================================
' TODO 1 : Composition forte (*--)
' Le contrôleur intègre en composition forte l'objet Signalisation (cardinalité 1)
' Syntaxe : ControleurAcces *-- "1" Signalisation : integre
' ------------------------------------------------------------------------------
' [ÉCRIVEZ LA COMPOSITION ICI]


' ==============================================================================
' TODO 2 : Agrégation faible (o--)
' Le contrôleur référence le service ClientAuthAPI par pointeur/référence (cardinalité 1)
' (Le serveur API existe indépendamment du contrôleur local)
' Syntaxe : ControleurAcces o-- "1" ClientAuthAPI : interroge
' ------------------------------------------------------------------------------
' [ÉCRIVEZ L'AGRÉGATION ICI]


@enduml
